# pregel-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  security_audit.yml
examples/: maximum_value.rs  pagerank.rs
examples/from_duckdb/: example.duckdb  main.rs
src/: graph_frame.rs  lib.rs  main.rs  pregel.rs
