[package]
name = "pregel-rs"
version = "0.0.1"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "A Graph library written in Rust for implementing your own algorithms in a Pregel fashion"
documentation = "https://docs.rs/crate/pregel-rs/latest"
repository = "https://github.com/angelip2303/pregel-rs"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["pregel", "graph", "pagerank", "polars", "duckdb"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
duckdb = { version = "0.7.1" }
polars = { version = "0.28.0", features = ["lazy"] }

[dev-dependencies]
duckdb = { version = "0.7.1", features = ["bundled"] }

[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"