[package]
name = "pregel-rs"
version = "0.0.10"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "A Graph library written in Rust for implementing your own algorithms in a Pregel fashion"
documentation = "https://docs.rs/crate/pregel-rs/latest"
repository = "https://github.com/angelip2303/pregel-rs"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["pregel", "graph", "pagerank", "polars", "algorithms"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
polars = { version = "0.29.0", features = ["lazy", "streaming", "parquet", "performant", "chunked_ids"] }

[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"